Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Cancro_da_haste__c.field-meta.xml
<CustomField>
    <fullName>Cancro_da_haste__c</fullName>
    <label>Cancro da haste</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>