Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Cor_do_hilo__c.field-meta.xml
<CustomField>
    <fullName>Cor_do_hilo__c</fullName>
    <label>Cor do hilo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preta Imperfeita</fullName>
            </value>
            <value>
                <fullName>Marrom Clara</fullName>
            </value>
            <value>
                <fullName>Marrom Média</fullName>
            </value>
            <value>
                <fullName>Preta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>