Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Exig_ncia_a_Fertilidade__c.field-meta.xml
<CustomField>
    <fullName>Exig_ncia_a_Fertilidade__c</fullName>
    <label>Exigência a Fertilidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>