Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/fase_de_aprova_o__c.field-meta.xml
<CustomField>
    <fullName>fase_de_aprova_o__c</fullName>
    <label>Fase de Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em processo</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>