Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Mancha_olho_de_r__c.field-meta.xml
<CustomField>
    <fullName>Mancha_olho_de_r__c</fullName>
    <label>Mancha olho-de-rã</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>Sem informação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>