Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Nematoides_Cisto_Ra_a_3__c.field-meta.xml
<CustomField>
    <fullName>Nematoides_Cisto_Ra_a_3__c</fullName>
    <label>Nematoides: Cisto Raça 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>