Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Nome_da_variedade__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_variedade__c</fullName>
    <formula>Variedad__r.Nombre_de_Registro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome da variedade</label>
    <type>Text</type>
</CustomField>