Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/PO_4__c.field-meta.xml
<CustomField>
    <fullName>PO_4__c</fullName>
    <label>PO: 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>