Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/PO_Gene_RPS1K__c.field-meta.xml
<CustomField>
    <fullName>PO_Gene_RPS1K__c</fullName>
    <label>PO: Gene RPS1K</label>
    <length>255</length>
    <type>Text</type>
</CustomField>