Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Podrid_o_radicular_de_Phytophtora__c.field-meta.xml
<CustomField>
    <fullName>Podrid_o_radicular_de_Phytophtora__c</fullName>
    <label>PO: Podridão radicular de Phytophtora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>