Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Regi_n__c.field-meta.xml
<CustomField>
    <fullName>Regi_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Región</label>
    <referenceTo>Regiao__c</referenceTo>
    <relationshipLabel>Variedades - Datos Complementares</relationshipLabel>
    <relationshipName>Variedades_Datos_Complementares</relationshipName>
    <type>Lookup</type>
</CustomField>