Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Safra_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Safra_Lancamento__c</fullName>
    <formula>TEXT( Variedad__r.Safra_Lancamento__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safra Lançamento</label>
    <type>Text</type>
</CustomField>