Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/STS_Tolerante_a_sulfonilureias__c.field-meta.xml
<CustomField>
    <fullName>STS_Tolerante_a_sulfonilureias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STS (Tolerante a sulfonilureias)</label>
    <type>Checkbox</type>
</CustomField>