Salesforce/main/default/main/default/objects/Variedad_Datos_Complementares__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variedad</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Variedades - Datos Complementares</relationshipLabel>
    <relationshipName>Variedades_Datos_Complementares</relationshipName>
    <type>Lookup</type>
</CustomField>